<resources>
    <string name="app_name">App name</string>
    <string name="update_title">app update available</string>
    <string name="update_force_dsc"> An update is available that must be installed.</string>
    <string name="update_dsc">An update is available. Would you like to install it?</string>
    <string name="btn_no_thanks">No, thanks</string>
    <string name="maintenance">app is under maintenance</string>
    <string name="update">Update</string>
    <string name="title">Title</string>
    <string name="new_ticket">New Ticket</string>
    <string name="description">Description</string>
    <string name="add_description_here">Add description here…</string>
    <string name="ticket_type">Ticket Type</string>
    <string name="run_on_apps_on_air">We run on AppsOnAir</string>
    <string name="submit">Submit</string>
    <string name="description_required">Description required!</string>
    <string name="label_brush">Brush</string>
    <string name="label_shape">Shape</string>
    <string name="label_oval">Oval</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Line</string>
    <string name="label_arrow">Arrow</string>
    <string name="msg_save_image">Are you sure you want to leave this page?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="done">Done</string>
    <string name="opacity">Opacity</string>
    <string name="please_wait">Please wait…</string>
    <string name="failed_to_save_image">Failed to save Image</string>
    <string name="image_saved_successfully">Image saved successfully!</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="open_setting">Open setting</string>
    <string name="continue_str">Continue</string>
    <string name="select_picture">Select Picture</string>
    <string name="save_image_alert_msg">To save this image, please allow required permission from setting.</string>
</resources>