<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:orientation="vertical"
    tools:context=".activities.FeedbackActivity">

    <LinearLayout
        android:id="@+id/ll_appbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/light_blue"
        android:elevation="10dp"
        android:gravity="center"
        android:paddingHorizontal="12dp"
        android:weightSum="10">

        <TextView
            android:id="@+id/tv_appbar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:text="@string/new_ticket"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/img_fill_close" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:paddingTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_ticket_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/ticket_type"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_spinner">

                    <com.skydoves.powerspinner.PowerSpinnerView
                        android:id="@+id/sp_ticket_type"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:dropDownWidth="match_parent"
                        android:dropDownVerticalOffset="5dp"
                        android:gravity="center_vertical"
                        android:overlapAnchor="false"
                        android:padding="10dp"
                        android:spinnerMode="dropdown"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:spinner_arrow_gravity="end"
                        app:spinner_arrow_tint="@color/black"
                        app:spinner_item_array="@array/ticket_type_array"
                        app:spinner_item_height="40dp"
                        app:spinner_popup_animation="dropdown"
                        app:spinner_popup_background="@drawable/rounded_spinner"
                        app:spinner_popup_elevation="12dp"
                        app:spinner_popup_height="100dp"
                        app:spinner_popup_padding="10dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    app:counterEnabled="true"
                    app:counterMaxLength="255"
                    app:counterTextColor="@color/black"
                    app:expandedHintEnabled="false"
                    app:hintEnabled="false"
                    app:placeholderText="@string/add_description_here"
                    app:placeholderTextColor="@color/grey_dark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_edit_text"
                        android:gravity="top|start"
                        android:inputType="textMultiLine"
                        android:lines="6"
                        android:maxLength="255"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:background="@android:color/transparent"
                        tools:layout_height="wrap_content"
                        tools:listitem="@layout/item_shake_bug" />

                    <ImageView
                        android:id="@+id/img_add"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/img_plus" />
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:gravity="center"
                android:text="@string/run_on_apps_on_air"
                android:textColor="@color/button_color"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/button_color"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>